delete bem folders

--- a/styles.less
+++ b/styles.less
@@ -48,3 +48,72 @@ table {
 	border-spacing: 0;
 }
 /*сброс настроек css*/
+
+.page {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	position: relative;
+}
+
+.page > img {
+	width: 100%;
+	height: auto;
+	padding: 0;
+	margin: 0;
+}
+
+.page_leftarrow {
+	position: absolute;
+	left: 2%;
+	top: 45%;
+	width: 3%;
+	height: auto;
+}
+.page_leftarrow > img {
+	width: 100%;
+	height: auto;
+}
+
+.page_rightarrow {
+	position: absolute;
+	right: 2%;
+	top: 45%;
+	width: 3%;
+	height: auto;
+}
+.page_rightarrow > img {
+	width: 100%;
+	height: auto;
+	transform: scale(-1, 1)
+}
+
+.slide {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+}
+
+.slide-top {
+	position: absolute;
+	width: 100%;
+	height: 60%;
+}
+
+.slide-top_pill {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+}
+.slide-top_pill > img {
+	width: 100%;
+	height: 100%;
+}
+
+.slide-bottom {
+	position: absolute;
+	width: 100%;
+	top: 60%;
+	height: 40%;
+}
