--- a/styles.css
+++ b/styles.css
@@ -176,16 +176,60 @@ table {
 }
 .slide-top_pill {
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: 7%;
+  height: auto;
+  top: 50%;
+  left: 10%;
 }
 .slide-top_pill > img {
   width: 100%;
   height: 100%;
+  transform: rotate(45deg);
+}
+.slide-top_patient {
+  position: absolute;
+  height: 100%;
+  width: auto;
+  left: 35%;
+}
+.slide-top_patient img {
+  position: absolute;
+  top: 10%;
+  height: 90%;
 }
 .slide-bottom {
   position: absolute;
   width: 100%;
   top: 60%;
   height: 40%;
+}
+.slide-bottom_numbers {
+  position: absolute;
+  top: 5%;
+  width: 75.5%;
+  margin-left: 12.5%;
+  margin-right: 12%;
+  padding: 0;
+}
+.slide-bottom_numbers img {
+  width: 100%;
+  height: auto;
+}
+.slide-bottom_form {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.slide-bottom_input-range {
+  position: absolute;
+  top: 24%;
+  width: 75%;
+  margin-left: 12.3%;
+  margin-right: auto;
+}
+.slide-bottom_input-range input {
+  position: absolute;
+  width: 100%;
+  height: auto;
 }
