--- a/styles.css
+++ b/styles.css
@@ -178,13 +178,15 @@ table {
   position: absolute;
   width: 7%;
   height: auto;
-  top: 50%;
+  top: 20%;
   left: 10%;
+  z-index: 2;
 }
 .slide-top_pill > img {
   width: 100%;
   height: 100%;
   transform: rotate(45deg);
+  z-index: 1;
 }
 .slide-top_patient {
   position: absolute;
@@ -223,13 +225,73 @@ table {
 }
 .slide-bottom_input-range {
   position: absolute;
-  top: 24%;
-  width: 75%;
-  margin-left: 12.3%;
+  top: 29%;
+  width: 80%;
+  height: 10%;
+  margin-left: 10%;
   margin-right: auto;
+  font-size: 100%;
 }
 .slide-bottom_input-range input {
   position: absolute;
   width: 100%;
   height: auto;
+}
+.slide-bottom_input-radio {
+  position: absolute;
+  width: 50%;
+  height: 20%;
+  top: 60%;
+  left: 25%;
+}
+.slide-bottom_input-radio input {
+  position: absolute;
+  display: none;
+  outline: none;
+}
+.slide-bottom_input-radio label {
+  cursor: pointer;
+  float: left;
+  display: block;
+  height: 100%;
+  width: 30%;
+  margin-right: 5%;
+}
+#radioLabel1 {
+  background: url('img/day-button.png');
+  background-size: cover;
+}
+#radio1:checked + label::before {
+  background: url('img/day-pushed-button.png');
+  background-size: cover;
+}
+#radioLabel2 {
+  background: url('img/week-button.png');
+  background-size: cover;
+}
+#radioLabel3 {
+  margin-right: 0;
+  background: url('img/mounth-button.png');
+  background-size: cover;
+}
+form {
+  font-size: 100%;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  outline: none;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 0;
+}
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  display: block;
+  width: 5em;
+  height: 5em;
+  cursor: pointer;
+  background: url('img/roller%20white.png');
+  background-size: 100% 100%;
 }
