--- a/styles.css
+++ b/styles.css
@@ -146,8 +146,13 @@ table {
   top: 45%;
   width: 3%;
   height: auto;
+  z-index: 4;
 }
-.page_leftarrow > img {
+.page_leftarrow:hover {
+  top: 44%;
+  transition: 0.5s;
+}
+.page_leftarrow img {
   width: 100%;
   height: auto;
 }
@@ -157,8 +162,13 @@ table {
   top: 45%;
   width: 3%;
   height: auto;
+  z-index: 4;
 }
-.page_rightarrow > img {
+.page_rightarrow:hover {
+  top: 44%;
+  transition: 0.5s;
+}
+.page_rightarrow img {
   width: 100%;
   height: auto;
   transform: scale(-1, 1);
@@ -174,7 +184,7 @@ table {
   width: 100%;
   height: 60%;
 }
-.slide-top_pill {
+.pill {
   position: absolute;
   width: 7%;
   height: auto;
@@ -182,19 +192,32 @@ table {
   left: 10%;
   z-index: 2;
 }
-.slide-top_pill > img {
+.pill img {
   width: 100%;
   height: 100%;
   transform: rotate(45deg);
   z-index: 1;
 }
-.slide-top_patient {
+.slide-top_patientSad {
   position: absolute;
   height: 100%;
   width: auto;
   left: 35%;
+  display: block;
 }
-.slide-top_patient img {
+.slide-top_patientSad img {
+  position: absolute;
+  top: 10%;
+  height: 90%;
+}
+.slide-top_patientHappy {
+  position: absolute;
+  height: 100%;
+  width: auto;
+  left: 25%;
+  display: none;
+}
+.slide-top_patientHappy img {
   position: absolute;
   top: 10%;
   height: 90%;
@@ -317,4 +340,10 @@ input[type='range']::-webkit-slider-thumb {
   cursor: pointer;
   background: url('img/roller%20white.png');
   background-size: 100% 100%;
+}
+#firstSlide {
+  display: block;
+}
+#secondSlide {
+  display: none;
 }
