--- a/styles.less
+++ b/styles.less
@@ -69,10 +69,15 @@ table {
 	top: 45%;
 	width: 3%;
 	height: auto;
-}
-.page_leftarrow > img {
-	width: 100%;
+	z-index: 4;
+	&:hover {
+		top: 44%;
+		transition: 0.5s;
+	}
+	img {
+		width: 100%;
 	height: auto;
+	}
 }
 
 .page_rightarrow {
@@ -81,11 +86,16 @@ table {
 	top: 45%;
 	width: 3%;
 	height: auto;
-}
-.page_rightarrow > img {
-	width: 100%;
+	z-index: 4;
+	&:hover {
+		top: 44%;
+		transition: 0.5s;
+	}
+	img {
+		width: 100%;
 	height: auto;
-	transform: scale(-1, 1)
+	transform: scale(-1, 1);
+	}
 }
 
 .slide {
@@ -101,7 +111,7 @@ table {
 	height: 60%;
 }
 
-.slide-top_pill {
+.pill {
 	position: absolute;
 	width: 7%;
 	height: auto;
@@ -109,20 +119,33 @@ table {
 	top: 20%;
 	left: 10%;
 	z-index: 2;
-	
-}
-.slide-top_pill > img {
-	width: 100%;
+	img {
+		width: 100%;
 	height: 100%;
 	transform: rotate(45deg);
 	z-index: 1;
+	}
 }
 
-.slide-top_patient {
+
+.slide-top_patientSad {
 	position: absolute;
 	height: 100%;
 	width: auto;
 	left: 35%;
+	display: block;
+	img {
+		position: absolute;
+		top: 10%;
+		height: 90%;
+	}
+}
+.slide-top_patientHappy {
+	position: absolute;
+	height: 100%;
+	width: auto;
+	left: 25%;
+	display: none;
 	img {
 		position: absolute;
 		top: 10%;
@@ -263,4 +286,9 @@ input[type='range']::-webkit-slider-thumb {
 	background-size: 100% 100%;
 		
 }
-
+#firstSlide {
+	display: block;
+}
+#secondSlide {
+	display: none;
+}
