--- a/styles.less
+++ b/styles.less
@@ -261,6 +261,40 @@ table {
 	background: url('img/mounth-pushed-button.png');
 	background-size: cover;
 }
+
+
+#radioLabel1-2 {
+	background: url('img/day-button.png');
+	background-size: cover;
+}
+#radio1-2:checked + #radioLabel1-2 {
+	transition: 200ms;
+	background: url('img/day-pushed-button.png');
+	background-size: cover;
+}
+
+#radioLabel2-2 {
+	background: url('img/week-button.png');
+	background-size: cover;
+}
+#radio2-2:checked + #radioLabel2-2 {
+	transition: 200ms;
+	background: url('img/week-pushed-button.png');
+	background-size: cover;
+}
+
+#radioLabel3-2 {
+	margin-right: 0;
+	background: url('img/mounth-button.png');
+	background-size: cover;
+}
+#radio3-2:checked + #radioLabel3-2 {
+	transition: 200ms;
+	background: url('img/mounth-pushed-button.png');
+	background-size: cover;
+}
+
+
 form {
 	font-size: 100%;
 }
